# multi_agent_ws

./: .gitignore  README.md  borealis_tf_statemgr_setpoint_renamer.launch  multi_agent_workspace.code-workspace  old_phase_sync.txt  questions.md  quiknotes.md
src/: D5implementation.md  Quickinfo.md  catkin_build.sh
src/Common/: ConstantsEnum.h  ConstantsMath.h
src/UWB_localization/collaborative_slam_online/: CMakeLists.txt  package.xml
src/UWB_localization/collaborative_slam_online/launch/: cslam_aloam.launch  cslam_t265.launch  record_bag.launch
src/UWB_localization/collaborative_slam_online/src/: collaborative_slam_online.cpp
src/borealis_consensus_path_planner/: CMakeLists.txt  package.xml
src/borealis_control_manager/: CMakeLists.txt  package.xml
src/borealis_helper_test_funcs/: CMakeLists.txt  package.xml
src/borealis_hri_interface/: CMakeLists.txt  package.xml
src/borealis_pose_tf_manager/: CMakeLists.txt  package.xml
src/borealis_pose_tf_manager/config/: uav_1.yaml  uav_2.yaml
src/borealis_pose_tf_manager/include/: PositionSetpointControllerHandle.h
src/borealis_pose_tf_manager/launch/: borealis_pose_tf_manager_uav1.launch  borealis_pose_tf_manager_uav2.launch
src/borealis_pose_tf_manager/src/: PositionSetpointControllerHandle.cpp  main.cpp
src/distributed_global_path_planner/: CMakeLists.txt  package.xml
src/distributed_global_path_planner/src/: DistributedGlobalPathPlanner.cpp  DistributedGlobalPathPlanner.h  DistributedGlobalPathPlannerHandler.cpp  DistributedGlobalPathPlannerHandler.h  main.cpp
src/distributed_global_path_planner/src/Common/: Common.h
src/distributed_global_path_planner/src/GoTherePathTracker/: GoTherePathTracker.cpp  GoTherePathTracker.h
src/distributed_global_path_planner/src/JumpPointSearch/: PathPlanning2DHandle.cpp  PathPlanning2DHandle.h  PathPlanning3DHandle.cpp  PathPlanning3DHandle.h  PathPlanningParams.h
src/distributed_global_path_planner/src/JumpPointSearch/jps3d/include/jps_basis/: data_utils.h
src/distributed_global_path_planner/src/PhaseSynchronizer/: PhaseSynchronizer.cpp  PhaseSynchronizer.h
src/distributed_global_path_planner/src/ProcessPointCloud/: ProcessPointCloud.cpp  ProcessPointCloud.h
src/distributed_global_path_planner/src/Test/: RunTests.cpp
src/distributed_multi_robot_formation/: CMakeLists.txt  package.xml
src/distributed_multi_robot_formation/cmake/: Findeigen-cdd.cmake
src/distributed_multi_robot_formation/src/: DistributedMultiRobotFormation.cpp  DistributedMultiRobotFormation.h  DistributedMultiRobotFormationHandler.cpp  DistributedMultiRobotFormationHandler.h  main.cpp
src/distributed_multi_robot_formation/src/Common/: Common.h
src/distributed_multi_robot_formation/src/ConvexHullOfRobotPosition/: ConvexHullOfRobotPosition.cpp  ConvexHullOfRobotPosition.h
src/distributed_multi_robot_formation/src/DirectionOfMotion/: DirectionOfMotion.cpp  DirectionOfMotion.h
src/distributed_multi_robot_formation/src/FollowMeGoalGenerator/: FollowMeGoalGenerator.cpp  FollowMeGoalGenerator.h
src/distributed_multi_robot_formation/src/Formation2D/: Formation2D.h
src/distributed_multi_robot_formation/src/Formation2D/Formation2DWithYaw/: Formation2DAbreast2Agents.cpp  Formation2DAbreast2Agents.h  Formation2DBase.h  Formation2DLine3Agents.cpp  Formation2DLine3Agents.h  Formation2DPoint1Agent.cpp  Formation2DPoint1Agent.h  Formation2DTri3Agents.cpp  Formation2DTri3Agents.h  Optimize2DFormation.cpp  Optimize2DFormation.h  Optimizer2DVarsConstrCost.h
src/distributed_multi_robot_formation/src/Formation2D/Formation2DWithoutYaw/: Formation2DAbreast2Agents.cpp  Formation2DAbreast2Agents.h  Formation2DBase.h  Formation2DLine3Agents.cpp  Formation2DLine3Agents.h  Formation2DPoint1Agent.cpp  Formation2DPoint1Agent.h  Formation2DTri3Agents.cpp  Formation2DTri3Agents.h  Optimize2DFormation.cpp  Optimize2DFormation.h  Optimizer2DVarsConstrCost.h
src/distributed_multi_robot_formation/src/Formation3D/: Formation3D.h
src/distributed_multi_robot_formation/src/Formation3D/Formation3DWithOnlyYaw/: Formation3DAbreast2Agents.cpp  Formation3DAbreast2Agents.h  Formation3DBase.h  Formation3DLine3Agents.cpp  Formation3DLine3Agents.h  Formation3DPoint1Agent.cpp  Formation3DPoint1Agent.h  Formation3DTri3Agents.cpp  Formation3DTri3Agents.h  Optimize3DFormation.cpp  Optimize3DFormation.h  Optimizer3DVarsConstrCost.h
src/distributed_multi_robot_formation/src/Formation3D/Formation3DWithRot/: Formation3DAbreast2Agents.cpp  Formation3DAbreast2Agents.h  Formation3DBase.h  Formation3DLine3Agents.cpp  Formation3DLine3Agents.h  Formation3DPoint1Agent.cpp  Formation3DPoint1Agent.h  Formation3DTri3Agents.cpp  Formation3DTri3Agents.h  Optimize3DFormation.cpp  Optimize3DFormation.h  Optimizer3DVarsConstrCost.h
src/distributed_multi_robot_formation/src/Formation3D/Formation3DWithoutRot/: Formation3DAbreast2Agents.cpp  Formation3DAbreast2Agents.h  Formation3DBase.h  Formation3DLine3Agents.cpp  Formation3DLine3Agents.h  Formation3DPoint1Agent.cpp  Formation3DPoint1Agent.h  Formation3DTri3Agents.cpp  Formation3DTri3Agents.h  Optimize3DFormation.cpp  Optimize3DFormation.h  Optimizer3DVarsConstrCost.h
src/distributed_multi_robot_formation/src/GenerateConvexRegions/: GenerateConvexRegions.cpp  GenerateConvexRegions.h
src/distributed_multi_robot_formation/src/PhaseSynchronizer/: PhaseSynchronizer.cpp  PhaseSynchronizer.h
src/distributed_multi_robot_formation/src/ProcessPointCloud/: ProcessPointCloud.cpp  ProcessPointCloud.h
src/distributed_multi_robot_formation/src/Test/: ConvexHullOfRobotPositionTest.cpp  DHBATest.cpp  DirectionOfMotionTest.cpp  FollowMeGoalGeneratorTest.cpp  GenerateConvexRegionsTest.cpp  Optimize2DFormationWithYawTest.cpp  Optimize2DFormationWithoutYawTest.cpp  Optimize3DFormationWithOnlyYawTest.cpp  Optimize3DFormationWithRotTest.cpp  Optimize3DFormationWithoutRotTest.cpp  ProcessPointCloudTest.cpp
src/distributed_multi_robot_formation/src/VirtualPositionAssignment/: DHBA.cpp  DHBA.h  Matrix.h  Munkres.cpp  Munkres.h  VirtualPositionAssignment.cpp  VirtualPositionAssignment.h
(+194 files in other folders)
