<?xml version="1.0"?>
<package format="2">
  <name>borealis_pose_tf_manager</name>
  <version>1.0.0</version>
  <description>publish position to offboard mode</description>
  <maintainer email="bensonkuan1990@gmail.com">Benson Kuan</maintainer>
  <license>TODO</license>
  <author email="bensonkuan1990@gmail.com">Benson Kuan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend> 
</package>
