<?xml version="1.0"?>
<package format="2">
  <name>distributed_formation</name>
  <version>1.0.0</version>
  <description>obtain multi robot formation</description>
  <maintainer email="bensonkuan1990@gmail.com">Benson Kuan</maintainer>
  <license>TODO</license>
  <author email="bensonkuan1990@gmail.com">Benson Kuan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--Other depends-->
  <depend>catkin_simple</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>ifopt</depend>
  <depend>decomp_util</depend>
  <depend>decomp_ros_utils</depend>
  <depend>eigen-cdd</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

</package>
